6movies in a row grid fitment

--- a/BlazorApp1/Pages/Index.razor
+++ b/BlazorApp1/Pages/Index.razor
@@ -9,26 +9,43 @@
 <MudLayout>
     <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
         <MudGrid>
-            <MudItem xs="3">
+            <MudItem xs="6" sm="2">
                 <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
-                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man No Way Home" Elevation="25" Class="rounded-lg"/>
+                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man: No Way Home" Elevation="25" Class="rounded-lg"/>
+                    Spider-Man: No Way Home
                 </MudPaper>
             </MudItem>
-            <MudItem xs="3">
+            <MudItem xs="6" sm="2">
                 <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
-                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man No Way Home" Elevation="25" Class="rounded-lg"/>
+                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man: No Way Home" Elevation="25" Class="rounded-lg"/>
                 </MudPaper>
             </MudItem>
-            <MudItem xs="3">
+            <MudItem xs="6" sm="2">
                 <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
-                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man No Way Home" Elevation="25" Class="rounded-lg"/>
+                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man: No Way Home" Elevation="25" Class="rounded-lg"/>
                 </MudPaper>
             </MudItem>
-            <MudItem xs="3">
+            <MudItem xs="6" sm="2">
                 <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
-                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man No Way Home" Elevation="25" Class="rounded-lg"/>
+                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man: No Way Home" Elevation="25" Class="rounded-lg"/>
                 </MudPaper>
             </MudItem>
+            <MudItem xs="6" sm="2">
+                <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
+                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man: No Way Home" Elevation="25" Class="rounded-lg"/>
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="6" sm="2">
+                <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
+                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man: No Way Home" Elevation="25" Class="rounded-lg"/>
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="6" sm="2">
+                <MudPaper Elevation="2" Class="pa-4" Style="height: 300px; width: 180px">
+                    <MudImage Src="images/Spider-Man.png" Fluid="true" Alt="Spider-Man: No Way Home" Elevation="25" Class="rounded-lg"/>
+                </MudPaper>
+            </MudItem>
+            
         </MudGrid>
     </MudContainer>
 </MudLayout>
